--- a/src/main/playground/todoList/todolist/package.json
+++ b/src/main/playground/todoList/todolist/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "portfolio",
+  "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
-    "react-app": "^1.1.2",
     "react-dom": "^16.11.0",
     "react-flip-move": "^3.0.4",
-    "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
